<resources>
    <string name="app_name" translatable="false">Kaliber</string>
    <string name="action_settings">Settings</string>
    <string name="version" translatable="false">v 1.0</string>
    <string name="menu_home">Strona główna</string>
    <string name="menu_contacts">Kontakty</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="menu_video">Konwersacja</string>
    <string name="menu_meetings">Spotkania</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_find_contact">Znajdź znajomego</string>
    <string name="menu_create_meeting">Utwórz spotkanie</string>
    <string name="privacy_header">Prywatność</string>
    <string name="call_header">Rozmowa</string>
    <string name="appearance_header">Wygląd</string>
    <string name="day_night_theme">Tryb jasny/ciemny</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="start_with_audio">Rozpocznij z uruchomionym mikrofonem</string>
    <string name="start_with_video">Rozpocznij z uruchomioną kamerą</string>
    <string name="private_user">Ukryj konto przed innymi użytkownikami</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="fragment_video">This is video fragment</string>
    <string name="fragment_home">This is home fragment</string>
    <string name="fragment_contacts">This is contacts fragment</string>
    <string name="fragment_meetings">This is meetings fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">john.doe@orange.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details">Details</string>
    <string name="prompt_username">Nazwa użytkownika</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_password_repeat">Powtórz hasło</string>
    <string name="prompt_search">Szukaj</string>
    <string name="prompt_firstname">Imię</string>
    <string name="prompt_lastname">Nazwisko</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_register">Utwórz konto</string>
    <string name="welcome">"Witaj "</string>
    <string name="username_must_not_be_empty">Nazwa użytkownika nie może być pusta</string>
    <string name="password_must_not_be_empty">Hasło nie może być puste</string>
    <string name="login_failed">Nie udało się zalogować</string>
    <string name="menu_login">Logowanie</string>
    <string name="menu_register">Rejestracja</string>
    <string name="account_creation">Tworzenie nowego konta</string>
    <string name="meeting_title_placeholder">Nazwa spotkania</string>
    <string name="meeting_id_placeholder">Id spotkania</string>
    <string name="meeting_owner_placeholder">Właściciel</string>
    <string name="meeting_id_label">"ID: "</string>
    <string name="meeting_owner_label">"Właściciel: "</string>
    <string name="meeting_date_label">"Data: "</string>
    <string name="id">ID</string>
    <string name="example_date">20/02/2020</string>
    <string name="inactive">Nieaktywne</string>
    <string name="id_val">Id:</string>
    <string name="participants_val">Uczestnicy:</string>
    <string name="join_create">Dołącz / Stwórz</string>
    <string name="join">Dołącz</string>
    <string name="create_meeting">Utwórz spotkanie</string>
    <string name="participants">Uczestnicy</string>
    <string name="no_meeting">Brak aktywnej konwersacji, dołącz z ekranu spotkań lub kontaktów</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="delete_contact_dialog_message">Czy na pewno chcesz usunąć wybraną osobę ze znajomych?</string>
    <string name="contacts_deleted_success">Pomyślnie usunięto wybrane kontakty</string>
    <string name="contact_deleted_success">Pomyślnie usunięto kontakt</string>
    <string name="contact_delete_fail">Nie udało się usunąć wybranego kontaktu</string>
    <string name="update_contacts_fail">Nie udało się zaktualizować listy kontaktów</string>
    <string name="get_contacts_fail">Nie udało się pobrać listy kontaktów</string>
    <string name="add_contact_dialog">Podaj nazwę kontaktu</string>
    <string name="add_contact_success">Pomyślnie dodano kontakt</string>
    <string name="add_contact_fail">Nie udało się dodać kontaktu</string>
    <string name="registed_failed">Nie udało się zarejestrować</string>
    <string name="fields_must_be_not_empty">Pola nie mogą być puste</string>
    <string name="meeting_name_empty">Nazwa spotkania nie może być pusta</string>
    <string name="passwords_dont_match">Wpisane hasła różnią się od siebie</string>
    <string name="password_too_short">Hasło musi składać się conajmniej z 8 znaków</string>
    <string name="email_not_correct">Niepoprawny format adresu email</string>
    <string name="add_friend">Dodaj</string>
    <string name="friend_added">Dodano do znajomych</string>
    <string name="delete_from_contacts">Usuń ze znajomych</string>
    <string name="prompt_meeting_name">Nazwa</string>
    <string name="prompt_meeting_date">Data</string>
    <string name="meeting_time">Godzina</string>
    <string name="menu_calendar">Kalendarz</string>
</resources>