<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/appearance_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="day_night"
            app:title="@string/day_night_theme" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/call_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="start_with_audio"
            app:title="@string/start_with_audio" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="start_with_video"
            app:title="@string/start_with_video" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/privacy_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="private_user"
            app:title="@string/private_user" />

    </PreferenceCategory>

</PreferenceScreen>