<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_meetings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_meetings" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_settings" />
    </group>
</menu>