<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/contact_item_bg"
    android:clickable="true"
    android:gravity="clip_vertical"
    android:longClickable="true"
    android:orientation="vertical"
    android:padding="6dp"
    android:paddingStart="16dp">

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="clip_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/meetingName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:ellipsize="end"
                    android:fontFamily="@font/abeezee"
                    android:singleLine="true"
                    android:text="@string/meeting_title_placeholder"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_date"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_owner_label"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/meetingOwner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_owner_placeholder"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/pressed_bg"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:tint="@color/orange"
            app:srcCompat="@drawable/baseline_meeting_room_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/participantsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/participantsInnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>